--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:rSNa/1uJt+kH+bK6xSYc+vbY0ZN3G7TEZkwDUavsAGI=
+APP_KEY=base64:xQDkGpsu70wJZ3t67ufMpbGvt6ntLliEcrICblUdimM=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -56,3 +56,4 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+FILESYSTEM_DRIVER=public
